crates/ferrum-interfaces/tests/ui/vnext/fail/trusted_active_sequence_binding_is_not_deserialize.rs
use ferrum_interfaces::vnext::TrustedActiveSequenceBinding;

fn main() {
    let _: TrustedActiveSequenceBinding = serde_json::from_str("{}").unwrap();
}
